--- a/project-skilled/index.html
+++ b/project-skilled/index.html
@@ -30,8 +30,10 @@
   </head>
   <body>
     <nav>
-      <img src="./assets/logo-dark.svg" alt="logo skilled in dark color" />
-      <button class="btn-nav">Get Started</button>
+      <div class="navbar">
+        <img src="./assets/logo-dark.svg" alt="logo skilled in dark color" />
+        <button class="btn-nav">Get Started</button>
+      </div>
     </nav>
     <main>
       <section class="top-section">
@@ -53,49 +55,75 @@
         </div>
       </section>
       <section class="bottom-section">
-        <div class="card first-card">
-          <h2>Check out our most popular courses!</h2>
-        </div>
-        <div class="card course-card">
-          <img src="./assets/icon-animation.svg" alt="an white icon representing a person running" class="icon">
-          <h3>Animation</h3>
-          <p>
-            Learn the latest animation techniques to create stunning motion
-            design and captivate your audience.
-          </p>
-          <button>Get Started</button>
-        </div>
-        <div class="card course-card">
-          <h3>Design</h3>
-          <p>
-            Create beautiful, usable interfaces to help shape the future of how
-            the web looks.
-          </p>
-          <button>Get Started</button>
-        </div>
-        <div class="card course-card">
-          <h3>Photography</h3>
-          <p>
-            Explore critical fundamentals like lighting, composition, and focus
-            to capture exceptional photos.
-          </p>
-          <button>Get Started</button>
-        </div>
-        <div class="card course-card">
-          <h3>Crypto</h3>
-          <p>
-            All you need to know to get started investing in crypto. Go from
-            beginner to advanced with this 54 hour course.
-          </p>
-          <button>Get Started</button>
-        </div>
-        <div class="card course-card">
-          <h3>Business</h3>
-          <p>
-            A step-by-step playbook to help you start, scale, and sustain your
-            business without outside investment.
-          </p>
-          <button>Get Started</button>
+        <div class="cards-container">
+          <div class="card first-card">
+            <h2>Check out our most popular courses!</h2>
+          </div>
+          <div class="card course-card">
+            <img
+              src="./assets/icon-animation.svg"
+              alt="an white icon representing a person running"
+              class="icon"
+            />
+            <h3>Animation</h3>
+            <p>
+              Learn the latest animation techniques to create stunning motion
+              design and captivate your audience.
+            </p>
+            <button>Get Started</button>
+          </div>
+          <div class="card course-card">
+            <img
+              src="./assets/icon-design.svg"
+              alt="an white icon representing design"
+              class="icon"
+            />
+            <h3>Design</h3>
+            <p>
+              Create beautiful, usable interfaces to help shape the future of
+              how the web looks.
+            </p>
+            <button>Get Started</button>
+          </div>
+          <div class="card course-card">
+            <img
+              src="./assets/icon-photography.svg"
+              alt="an white icon representing a photography machine"
+              class="icon"
+            />
+            <h3>Photography</h3>
+            <p>
+              Explore critical fundamentals like lighting, composition, and
+              focus to capture exceptional photos.
+            </p>
+            <button>Get Started</button>
+          </div>
+          <div class="card course-card">
+            <img
+              src="./assets/icon-crypto.svg"
+              alt="an white icon representing a crypto currency"
+              class="icon"
+            />
+            <h3>Crypto</h3>
+            <p>
+              All you need to know to get started investing in crypto. Go from
+              beginner to advanced with this 54 hour course.
+            </p>
+            <button>Get Started</button>
+          </div>
+          <div class="card course-card">
+            <img
+              src="./assets/icon-business.svg"
+              alt="an white icon representing a suitcase"
+              class="icon"
+            />
+            <h3>Business</h3>
+            <p>
+              A step-by-step playbook to help you start, scale, and sustain your
+              business without outside investment.
+            </p>
+            <button>Get Started</button>
+          </div>
         </div>
       </section>
     </main>
