:lipstick::iphone::rocket: iPad Air and iPhone XR version done. project ready to deploy

--- a/project-skilled/index.html
+++ b/project-skilled/index.html
@@ -47,6 +47,14 @@
         </div>
         <div class="image">
           <picture>
+            <source
+              media="(max-width: 414px)"
+              srcset="./assets/image-hero-mobile@2x.png"
+            />
+            <source
+              media="(max-width: 820px)"
+              srcset="./assets/image-hero-tablet@2x.png"
+            />
             <img
               src="./assets/image-hero-desktop@2x.png"
               alt="woman with a dark hair drinking tea in a white cup in front of a laptop"
