:lipstick::pencil: small change on the CSS and README update

--- a/project-skilled/index.html
+++ b/project-skilled/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Tulio Minini" />
-    <meta name="image" property="og:image" content="../preview.jpg" />
+    <meta
+      name="image"
+      property="og:image"
+      content="./assets/screenshot-desktop.png"
+    />
+
     <!-- Favicon -->
     <link
       rel="icon"
@@ -26,7 +31,7 @@
     />
 
     <!-- Web Page Tab -->
-    <title>Frontend Mentor | Skilled e-learning landing page</title>
+    <title>Skilled e-learning landing page</title>
   </head>
   <body>
     <nav>
